--- a/movie-review/package.json
+++ b/movie-review/package.json
@@ -2,10 +2,12 @@
   "name": "movie-review",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://austdobe.github.io/movieReview",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -16,6 +18,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
