--- a/movie-review/package.json
+++ b/movie-review/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movie-review",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://austdobe.github.io/movieReview/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
